Fix for newer Kafkas: Add cleanup policy to topic creation